many active conferences.

Changed find_conf so that conferences are located via a hash table rather than
a sequential search through the conference list.  The size of the table is
configurable via the Makefile and the default is 199 buckets.  To change the
default table size either edit the Makefile default or specify the value on the
command line: make CONFERENCE_TABLE_SIZE=251.  Table entries are list heads and
chaining is used to resolve collisions so that the number of entries is not
limited to the number of buckets in the table.  A bucket field is added to the
conference list command output so that a conference name can be correlated with
its hash table entry.

Changed preprocessor flag, APP_KONFERENCE_DEBUG, so that debug logging is
enabled only if it's defined. To enable debug logging: edit the Makefile or
set it on the command line: make APP_KONFERENCE_DEBUG=1.

Removed channel and conference name strings from the member control block. The
former can be referenced via the channel pointer in the member control block.
The latter can be referenced via a pointer to conference control block which
was added to the member contol block for this purpose.

Changed the conference state event implementation so that speaking/silent
notifications are generated in the member thread. The advantage of this
approach is that it doesn't require the conference thread to periodically
scan the member list for member state changes.

Changed "x" option so that all members are kicked and the conference ends when
the last moderator leaves the conference.

Added a Makefile variable AC_USE_SPEEX. The default value is undefined, that
is, the SPEEX codec is not available.

Changed the format of the conference list command. Specifically, removed the
bucket field and added a duration field. The duration field indicates either
the conference elapsed time when conferences are listed or the member elapsed
time when members are listed.