@@ -1841,9 +1841,10 @@ void register_conference_cli( void )
 	ast_cli_register( &cli_drivechannel );
 #endif
 #endif
+#ifdef	MANAGER_COMMANDS
 	ast_manager_register( "KonferenceList", 0, manager_conference_list, "Conference List" );
 	ast_manager_register( "KonferenceEnd", EVENT_FLAG_CALL, manager_conference_end, "Terminate a conference" );
-
+#endif
 }
 
 void unregister_conference_cli( void )
@@ -1899,6 +1900,8 @@ void unregister_conference_cli( void )
 	ast_cli_unregister( &cli_drivechannel );
 #endif
 #endif
+#ifdef	MANAGER_COMMANDS
 	ast_manager_unregister( "KonferenceList" );
 	ast_manager_unregister( "KonferenceEnd" );
+#endif
 }
