@@ -176,3 +176,6 @@ Changed the format of the conference list command. Specifically, removed the
 bucket field and added a duration field. The duration field indicates either
 the conference elapsed time when conferences are listed or the member elapsed
 time when members are listed.
+
+Deprecated management commands KonferenceList and KonferenceEnd as similar
+functions are available from the command line and via the AMI command action.
